fixed: Minor UI clipping issue in MovieCard

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -19,4 +19,7 @@
     white-space: nowrap;
     font-size: 1.5rem;
     z-index: 10;
+    width: 100%;
+    max-width: 100%;
+    white-space: normal;
 }
